--- a/index.html
+++ b/index.html
@@ -128,7 +128,12 @@
             <div class="image"><img src="images/vaganov.jpg" alt="" /></div><div class="content">
                 <time>12:30-13:00</time>
                 <h2>Жизнь после JS-фреймворков</h2>
-                <p>А, может, ну их? (на самом деле нет)</p>
+                <p>
+                  А, может, ну их? (на самом деле нет) <br>
+                  Что и как сделать без них? <br>
+                  PlainJS <3 <br>
+                </p>
+
                 <blockquote>Андрей Ваганов, AdvantShop.net</blockquote>
             </div>
         </section>
