add Simbirsoft sponsors logo

--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
                     <img src="images/simtech.png" height="150" alt="Simtech" title="Simtech">
                   </a>
                 </li>
+                <li class="icon">
+                  <a href="http://www.simbirsoft.com/ruru/" target="_blank">
+                    <img src="images/ss.jpg" height="150" alt="СимбирСофт" title="СимбирСофт">
+                  </a>
+                </li>
             </ul>
 
             <h2>Информационные партнёры:</h2>
