Добавил доклад Кирилла

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image"><img src="images/nayanov.jpg" alt="" /></div><div class="content">
+            <div class="image"><img src="images/nayanov.jpg" alt="" /></div>
+            <div class="content">
                 <time>15:30-16:00</time>
                 <h2>Post-HTML</h2>
                 <p>
@@ -178,6 +179,17 @@
                 <blockquote>Олег Наянов, Digital Zone</blockquote>
             </div>
         </section>
+        <section class="rest">Перерыв (16:00 - 16:10)</section>
+        <section class="spotlight spotlight-right">
+            <div class="image"><img src="images/kirill.jpg" alt="" /></div>
+            <div class="content">
+                <time>16:10-16:50</time>
+                <h2>Почему сложно программировать UI</h2>
+                <p>Конечные автоматы и Идеальный фреймворк</p>
+                <blockquote>Кирилл Мокевнин, Hexlet</blockquote>
+            </div>
+        </section>
+
     </section>
 
     <section id="three" class="wrapper style3 special">
