--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                   Что и как сделать без них? <br>
                   PlainJS <3 <br>
                 </p>
-
-                <blockquote>Андрей Ваганов, AdvantShop.net</blockquote>
+                <blockquote>Андрей Ваганов, Aggregion</blockquote>
             </div>
         </section>
         <section class="rest">Перерыв (13:00 - 14:00)</section>
