Add restream logo

--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
                     <img src="images/ss.jpg" height="150" alt="СимбирСофт" title="СимбирСофт">
                   </a>
                 </li>
+                <li class="icon">
+                  <a href="http://restream.pro" target="_blank">
+                    <img src="images/restream.jpg" height="150" alt="Рестрим" title="Рестрим">
+                  </a>
+                </li>
             </ul>
 
             <h2>Информационные партнёры:</h2>
