обновил ссылки на презентации

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p>Для тех из нас, которым приходится быть «немного дизайнерами»</p>
                 <blockquote>Ярослав Трегубов, фрилансер</blockquote>
                 <div class="person-icons">
-                    <a class="fa fa-book" href="/presentations/2015/tregubov/design.pdf" title="Презентация"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-book"></i> <a href="/presentations/2015/tregubov/design.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
                 </div>
             </div>
         </section>
@@ -125,7 +125,7 @@
                 <p>Современности веб-шрифтов рассказ</p>
                 <blockquote>Дима Вислов, Hexlet</blockquote>
                 <div class="person-icons">
-                    <a class="fa fa-book" href="http://vdv73.ru/pres/2015fronthub/" title="Презентация"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-book"></i> <a href="http://vdv73.ru/pres/2015fronthub/" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
                 </div>
             </div>
         </section>
@@ -161,6 +161,9 @@
                 <h2>Увидеть больше</h2>
                 <p>Как делать сайты, адаптированные для слепых и слабовидящих людей</p>
                 <blockquote>Николай Беликов, Simbirsoft, <a href="http://nikbelikov.ru/" target="_blank">nikbelikov.ru</a></blockquote>
+                <div class="person-icons">
+                    <i class="fa fa-book"></i> <a href="/presentations/2015/nikbelikov/nikbelikov.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                </div>
             </div>
         </section>
         <section class="spotlight">
@@ -171,7 +174,7 @@
                 <p>Performance «из коробки» и кастомные решения</p>
                 <blockquote>Артём Хлебников, фрилансер</blockquote>
                 <div class="person-icons">
-                    <a class="fa fa-book" href="/presentations/2015/khlebnikov/slides.pdf" title="Презентация"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-book"></i> <a href="/presentations/2015/khlebnikov/slides.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
                 </div>
             </div>
         </section>
@@ -185,7 +188,7 @@
                 </p>
                 <blockquote>Олег Наянов, Digital Zone</blockquote>
                 <div class="person-icons">
-                    <a class="fa fa-book" href="/presentations/2015/nayanov/" title="Презентация"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-book"></i> <a href="/presentations/2015/nayanov/" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
                 </div>
             </div>
         </section>
@@ -198,7 +201,7 @@
                 <p>Конечные автоматы и Идеальный фреймворк</p>
                 <blockquote>Кирилл Мокевнин, Hexlet</blockquote>
                 <div class="person-icons">
-                    <a class="fa fa-book" href="/presentations/2015/mokevnin/ui.pdf" title="Презентация"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-book"></i> <a href="/presentations/2015/mokevnin/ui.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
                 </div>
             </div>
         </section>
