--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                 <h2>Custom vs. Native</h2>
                 <p>Противостояние элементов форм</p>
                 <blockquote>Денис Ежков, ITECH.group</blockquote>
+                <div class="person-icons">
+                    <i class="fa fa-book"></i> <a href="/presentations/2015/ezhkov/custom_vs_native_public.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                </div>
             </div>
         </section>
         <section class="spotlight">
@@ -139,6 +142,9 @@
                   PlainJS <3 <br>
                 </p>
                 <blockquote>Андрей Ваганов, Aggregion</blockquote>
+                <div class="person-icons">
+                    <i class="fa fa-book"></i> <a href="http://slides.com/prostoandrei91/js" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                </div>
             </div>
         </section>
         <section class="rest">Перерыв (13:00 - 14:00)</section>
