--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                   Что почтовики нам готовят?
                 </p>
                 <blockquote>Миша aka Shoot, Tittygram / X-cart</blockquote>
+                <div class="person-icons">
+                    <i class="fa fa-book"></i> <a href="/presentations/2015/sinyakov/shower-fronthub/Mike.html" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                </div>
             </div>
         </section>
         <section class="spotlight">
