добавлена презентация по дизайну

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <blockquote>Ярослав Трегубов, фрилансер</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/tregubov/design.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="http://www.youtube.com/watch?v=v5rnTb99TDw" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -117,7 +117,6 @@
                 <blockquote>Денис Ежков, ITECH.group</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/ezhkov/custom_vs_native_public.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -128,7 +127,6 @@
                 <blockquote>Дима Вислов, Hexlet</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="http://vdv73.ru/pres/2015fronthub/" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -143,7 +141,6 @@
                 <blockquote>Андрей Ваганов, Aggregion</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="http://slides.com/prostoandrei91/js" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -159,7 +156,6 @@
                 <blockquote>Миша aka Shoot, Tittygram / X-cart</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/sinyakov/shower-fronthub/Mike.html" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -171,7 +167,6 @@
                 <blockquote>Николай Беликов, Simbirsoft, <a href="http://nikbelikov.ru/" target="_blank">nikbelikov.ru</a></blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/nikbelikov/nikbelikov.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -183,7 +178,6 @@
                 <blockquote>Артём Хлебников, фрилансер</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/khlebnikov/slides.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -197,7 +191,6 @@
                 <blockquote>Олег Наянов, Digital Zone</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/nayanov/" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -210,7 +203,6 @@
                 <blockquote>Кирилл Мокевнин, Hexlet</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/mokevnin/UI.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
-                    <i class="fa fa-video-camera"></i> <a href="" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
