--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
                 </div>
             </div>
         </section>
-        <section class="rest">Перерыв (13:00 - 14:00)</section>
         <section class="spotlight">
             <div class="image"><img src="images/shoot.jpg" alt="" /></div><div class="content">
                 <h2>Мы вставили сайт в ваш Email</h2>
@@ -194,8 +193,7 @@
                 </div>
             </div>
         </section>
-        <section class="rest">Перерыв (16:00 - 16:10)</section>
-        <section class="spotlight spotlight-right">
+        <section class="spotlight">
             <div class="image"><img src="images/kirill.jpg" alt="" /></div>
             <div class="content">
                 <h2>Почему сложно программировать UI</h2>
