добавлена ссылка на видео по контролам

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 <blockquote>Денис Ежков, ITECH.group</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/ezhkov/custom_vs_native_public.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="http://www.youtube.com/watch?v=L4_tjYbYd_I" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
