добавлена ссылка на запись доклада

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                 <blockquote>Николай Беликов, Simbirsoft, <a href="http://nikbelikov.ru/" target="_blank">nikbelikov.ru</a></blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/nikbelikov/nikbelikov.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="https://youtu.be/7mH0X2Fg_44" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
