--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                 <blockquote>Миша aka Shoot, Tittygram / X-cart</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/sinyakov/shower-fronthub/Mike.html" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="https://youtu.be/CErSXO0GQdc" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
