добавил все видео

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <blockquote>Дима Вислов, Hexlet</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="http://vdv73.ru/pres/2015fronthub/" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="http://www.youtube.com/watch?v=9CA33auBgwU" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -142,6 +143,7 @@
                 <blockquote>Андрей Ваганов, Aggregion</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="http://slides.com/prostoandrei91/js" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="http://www.youtube.com/watch?v=-W7kFbCXVqw" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -180,6 +182,7 @@
                 <blockquote>Артём Хлебников, фрилансер</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/khlebnikov/slides.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="http://www.youtube.com/watch?v=Px9hiFgOKR0" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -193,6 +196,7 @@
                 <blockquote>Олег Наянов, Digital Zone</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/nayanov/" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="http://www.youtube.com/watch?v=Zq12MQSesWc" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
@@ -204,6 +208,7 @@
                 <blockquote>Кирилл Мокевнин, Hexlet</blockquote>
                 <div class="person-icons">
                     <i class="fa fa-book"></i> <a href="/presentations/2015/mokevnin/UI.pdf" title="Презентация" target="_blank"><span class="person-icons-text">Презентация</span></a>
+                    <i class="fa fa-video-camera"></i> <a href="http://www.youtube.com/watch?v=WaIff6Cs1gs" title="Запись презентации" target="_blank"><span class="person-icons-text">Видеозапись</span></a>
                 </div>
             </div>
         </section>
