--- a/links.html
+++ b/links.html
@@ -8,9 +8,9 @@
 	<h1>Полезные ссылочки</h1>
 
 
-	<nav id="nav">
+	<nav id="nav" style="margin-bottom: 100px">
 		<ul>
-			<li><a href="#emails"></a></li>
+			<li><a href="#emails">Emails</a></li>
 		</ul>
 	</nav>
 
@@ -21,7 +21,10 @@
 				<a href="https://github.com/mjmlio/mjml">mjml</a>
 			</li>
 		</ul>
-		<a href="#nav">top ↑</a>
+		<div style="text-align: right;">
+			<a href="#nav">top ↑</a>
+		</div>
+
 	</article>
 </body>
 </html>
