add Regex section

--- a/links.html
+++ b/links.html
@@ -11,10 +11,12 @@
 	<nav id="nav" style="margin-bottom: 100px">
 		<ul>
 			<li><a href="#emails">Emails</a></li>
+			<li><a href="#regex">Regex</a></li>
 		</ul>
 	</nav>
 
 	<article id="emails">
+		<h2>Emails</h2>
 		<ul>
 			<li>
 				<h3>The only framework that makes responsive-email easy</h3>
@@ -24,7 +26,19 @@
 		<div style="text-align: right;">
 			<a href="#nav">top ↑</a>
 		</div>
+	</article>
 
+	<article id="regex">
+		<h2>Emails</h2>
+		<ul>
+			<li>
+				<h3>The only framework that makes responsive-email easy</h3>
+				<a href="https://regex101.com">regex101</a>
+			</li>
+		</ul>
+		<div style="text-align: right;">
+			<a href="#nav">top ↑</a>
+		</div>
 	</article>
 </body>
 </html>
