--- a/links.html
+++ b/links.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style media="screen">
+		article{
+			margin: 2rem auto;
+			max-width: 900px;
+		}
+	</style>
 </head>
 <body>
 	<h1>Полезные ссылочки</h1>
@@ -29,10 +35,10 @@
 	</article>
 
 	<article id="regex">
-		<h2>Emails</h2>
+		<h2>Regex</h2>
 		<ul>
 			<li>
-				<h3>The only framework that makes responsive-email easy</h3>
+				<h3>Online regex tester and debugger: JavaScript, Python, PHP, and PCRE</h3>
 				<a href="https://regex101.com">regex101</a>
 			</li>
 		</ul>
