--- a/index.html
+++ b/index.html
@@ -78,41 +78,46 @@
               </section>
 
             <!-- ВОТ ЭТО ОСТАВИТЬ КОГДА ПОЯВЯТСЯ ДОКЛАДЫ -->
-              <!-- <section id="four" class="wrapper alt style1">
+              <section id="four" class="wrapper alt style1">
                 <div class="inner">
                   <h2 class="major">Vitae phasellus</h2>
                   <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
                   <section class="features">
                     <article>
-                      <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-                      <h3 class="major">Sed feugiat lorem</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                      <a href="#" class="special">Learn more</a>
+                      <a href="#" class="image"><img src="images/shoot.jpg" alt="" /></a>
+                      <h3 class="major">Общий язык с дизайнером. Ритм!</h3>
+                      <p>Михаил Синяков from X-Cart</p>
+                      <p>
+                        Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
+                        Зачем усложнять жизнь дополнительной абстракцией?<br>
+                        Какие есть готовые решения
+                      </p>
+                      <!-- <a href="#" class="special">Learn more</a> -->
                     </article>
                     <article>
-                      <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-                      <h3 class="major">Nisl placerat</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                      <a href="#" class="special">Learn more</a>
+                      <a href="#" class="image"><img src="images/ezhkov.jpg" alt="" /></a>
+                      <h3 class="major">Что-то там про обучение</h3>
+                      <p>Денис Ежков from Itech</p>
+                      <!-- <a href="#" class="special">Learn more</a> -->
                     </article>
                     <article>
-                      <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-                      <h3 class="major">Ante fermentum</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                      <a href="#" class="special">Learn more</a>
+                      <a href="#" class="image"><img src="images/nikbelikov.jpg" alt="" /></a>
+                      <h3 class="major"></h3>
+                      <p>Николай Беликов from Restream</p>
+                      <!-- <a href="#" class="special">Learn more</a> -->
                     </article>
-                    <article>
+                    <!-- <article>
                       <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
                       <h3 class="major">Fusce consequat</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                       <a href="#" class="special">Learn more</a>
-                    </article>
+                    </article> -->
                   </section>
-                  <ul class="actions">
+                  <!-- <ul class="actions">
                     <li><a href="#" class="button">Browse All</a></li>
-                  </ul>
+                  </ul> -->
                 </div>
-              </section> -->
+              </section>
 
           </section>
 
