--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/main.css" />
     <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -44,10 +47,15 @@
             <!-- One -->
               <section id="one" class="wrapper spotlight style1">
                 <div class="inner">
-                  <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                  <a href="#" class="image"><img src="images/shoot.jpg" width="240" height="240" alt="" /></a>
                   <div class="content">
-                    <h2 class="major">Дизайн</h2>
-                    <p>Мнения экспертов в сфере дизайна от команды #тыждизайнер</p>
+                    <h2 class="major">ОБЩИЙ ЯЗЫК С ДИЗАЙНЕРОМ. РИТМ!</h2>
+                      <p>МИХАИЛ СИНЯКОВ from X-Cart</p>
+                      <p>
+                          Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
+                          Зачем усложнять жизнь дополнительной абстракцией?<br>
+                          Какие есть готовые решения?
+                      </p>
                     <!-- <a href="#" class="special">Learn more</a> -->
                   </div>
                 </div>
@@ -56,10 +64,11 @@
             <!-- Two -->
               <section id="two" class="wrapper alt spotlight style2">
                 <div class="inner">
-                  <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                  <a href="#" class="image"><img src="images/ezhkov.jpg" width="240" height="240" alt="" /></a>
                   <div class="content">
-                    <h2 class="major">Верстка</h2>
-                    <p>Верстка сложных и интересных макетов, автоматизации процесов, качество</p>
+                    <h2 class="major">Что-то там про обучение</h2>
+                    <p>Денис Ежков from Itech</p>
+                    <p>Описание</p>
                     <!-- <a href="#" class="special">Learn more</a> -->
                   </div>
                 </div>
@@ -68,11 +77,12 @@
             <!-- Three -->
               <section id="three" class="wrapper spotlight style3">
                 <div class="inner">
-                  <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                  <a href="#" class="image"><img src="images/nikbelikov.jpg" width="240" height="240" alt="Фото Николая Беликова" /></a>
                   <div class="content">
-                    <h2 class="major">программирование на js</h2>
-                    <p>Лучшие подходы, сложные техники, и простые реализации</p>
-                    <!-- <a href="#" class="special">Learn more</a> -->
+                    <h2 class="major">test</h2>
+                    <p>Николай Беликов from Restream</p>
+                    <p>Описание</p>
+                     <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
                   </div>
                 </div>
               </section>
@@ -80,42 +90,25 @@
             <!-- ВОТ ЭТО ОСТАВИТЬ КОГДА ПОЯВЯТСЯ ДОКЛАДЫ -->
               <section id="four" class="wrapper alt style1">
                 <div class="inner">
-                  <h2 class="major">Vitae phasellus</h2>
-                  <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+                  <h2 class="major">Спонсоры</h2>
+                  <p>Если вы хотите помочь в организации...</p>
                   <section class="features">
                     <article>
                       <a href="#" class="image"><img src="images/shoot.jpg" alt="" /></a>
-                      <h3 class="major">Общий язык с дизайнером. Ритм!</h3>
-                      <p>Михаил Синяков from X-Cart</p>
-                      <p>
-                        Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
-                        Зачем усложнять жизнь дополнительной абстракцией?<br>
-                        Какие есть готовые решения
-                      </p>
-                      <!-- <a href="#" class="special">Learn more</a> -->
+                      <h3 class="major">1</h3>
+                      <p>Название</p>
+                       <a href="#" class="special">Рекламная ссылка</a>
                     </article>
                     <article>
-                      <a href="#" class="image"><img src="images/ezhkov.jpg" alt="" /></a>
-                      <h3 class="major">Что-то там про обучение</h3>
-                      <p>Денис Ежков from Itech</p>
-                      <!-- <a href="#" class="special">Learn more</a> -->
+                      <a href="#" class="image"><img src="images/shoot.jpg" alt="" /></a>
+                      <h3 class="major">2</h3>
+                      <p>Название</p>
+                      <a href="#" class="special">Рекламная ссылка</a>
                     </article>
-                    <article>
-                      <a href="#" class="image"><img src="images/nikbelikov.jpg" alt="" /></a>
-                      <h3 class="major"></h3>
-                      <p>Николай Беликов from Restream</p>
-                      <!-- <a href="#" class="special">Learn more</a> -->
-                    </article>
-                    <!-- <article>
-                      <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-                      <h3 class="major">Fusce consequat</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                      <a href="#" class="special">Learn more</a>
-                    </article> -->
                   </section>
-                  <!-- <ul class="actions">
-                    <li><a href="#" class="button">Browse All</a></li>
-                  </ul> -->
+                  <ul class="actions">
+                    <li><a href="mailto:frontendsu@gmail.com?subject=fronthub16" class="button">Стать спонсором</a></li>
+                  </ul>
                 </div>
               </section>
 
