--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                 </li>
                 <li class="fa-phone"><a href="tel:+79876319367">+79876319367</a></li>
                 <li class="fa-envelope"><a href="mailto:frontendsu@gmail.com?subject=fronthub16">frontendsu@gmail.com</a></li>
-                <li class="fa-twitter"><a href="https://twitter.com/frontendsu">frontendsu</a></li>
-                <li class="fa-vk"><a href="https://vk.com/frontendsu">frontendsu</a></li>
-                <li class="fa-instagram"><a href="https://www.instagram.com/fronthub/">fronthub</a></li>
+                <li class="fa-twitter"><a href="https://twitter.com/frontendsu" target="_blank">frontendsu</a></li>
+                <li class="fa-vk"><a href="https://vk.com/frontendsu" target="_blank">frontendsu</a></li>
+                <li class="fa-instagram"><a href="https://www.instagram.com/fronthub/" target="_blank">fronthub</a></li>
               </ul>
               <ul class="copyright">
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
