--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                   <p>Если вы хотите помочь в организации...</p>
                   <section class="features">
                     <article>
-                      <a href="#" class="image"><img src="images/shoot.jpg" alt="" /></a>
-                      <h3 class="major">1</h3>
-                      <p>Название</p>
-                       <a href="#" class="special">Рекламная ссылка</a>
+                      <a href="#" class="image"><img src="images/x-cart-logo.png" alt="" /></a>
+                      <h3 class="major">X-Cart</h3>
+                      <p>Gold</p>
+                       <a href="https://www.x-cart.com/contact-us.html" class="special">x-cart.com</a>
                     </article>
                     <article>
                       <a href="#" class="image"><img src="images/shoot.jpg" alt="" /></a>
