--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 										<h2 class="major">ОБЩИЙ ЯЗЫК С ДИЗАЙНЕРОМ. РИТМ!</h2>
 										<p>МИХАИЛ СИНЯКОВ from X-Cart</p>
 										<p>
-												Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
-												Зачем усложнять жизнь дополнительной абстракцией?<br>
-												Какие есть готовые решения?
+											Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
+											Зачем усложнять жизнь дополнительной абстракцией?<br>
+											Какие есть готовые решения?
 										</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -83,6 +83,7 @@
 									<div class="content">
 										<h2 class="major">Название доклада уточняется</h2>
 										<p>Денис Ежков from Itech</p>
+										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -91,10 +92,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/kolya.jpg" alt="" /></a>
+									<a href="http://nikbelikov.ru/" class="image"><img src="images/kolya.jpg" alt="" /></a>
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
 										<p>Николай Беликов from Restream</p>
+										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 										 <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
 									</div>
@@ -108,6 +110,7 @@
 									<div class="content">
 										<h2 class="major">Про JS</h2>
 										<p>Константин Макарычев from Provectus (Казань)</p>
+										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 									</div>
 								</div>
@@ -120,6 +123,7 @@
 									<div class="content">
 										<h2 class="major">CSS Modules</h2>
 										<p>Олег Наянов from DZ Systems</p>
+										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 									</div>
 								</div>
@@ -132,6 +136,7 @@
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
 										<p>Богдан Руденко from Restream (Москва)</p>
+										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 									</div>
 								</div>
@@ -144,6 +149,7 @@
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
 										<p>Ярослав Трегубов from PRO100</p>
+										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 									</div>
 								</div>
@@ -196,11 +202,11 @@
 							</form>
 							<ul class="contact">
 								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									«Хаб-кафе», ТЦ «Спартак»<br />
+									г. Ульяновск, ул. Железной Дивизии, 5б<br />
+									12 ноября 2015, 11:00<br />
+									Вход свободный
 								</li>
-								<li class="fa-phone">(000) 000-0000</li>
 								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
 								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
