--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<img src="./logo/fronthub-logo.png" alt="Fronthub" width="70">
+							<img class="logo" src="./logo/fronthub-logo.png" alt="Fronthub" width="70">
 							<h2>Ежегодная конференция Fronthub</h2>
 							<p>12 ноября 2015, 11:00</p>
 							<p>«Хаб-Кафе», ТЦ «Спартак» <br/>
@@ -92,7 +92,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="http://nikbelikov.ru/" class="image"><img src="images/kolya.jpg" alt="" /></a>
+									<a href="http://nikbelikov.ru/" class="image"><img src="images/nikbelikov.jpg" alt="" /></a>
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
 										<p>Николай Беликов from Restream</p>
@@ -162,12 +162,12 @@
 										<article>
 											<a href="#" class="image"><img src="images/x-cart-logo.png" alt="" /></a>
 											<h3 class="major">X-Cart</h3>
-											 <a href="https://www.x-cart.com/contact-us.html" class="special">x-cart.com</a>
+											 <a href="https://www.x-cart.com/contact-us.html" class="special" target="_blank">x-cart.com</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/itech.png" alt="" /></a>
 											<h3 class="major">ITECH GROUP</h3>
-											<a href="http://itech-group.ru/" class="special">itech-group.ru</a>
+											<a href="http://itech-group.ru/" class="special" target="_blank">itech-group.ru</a>
 										</article>
 									</section>
 									<ul class="actions">
@@ -181,11 +181,11 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
+							<h2 class="major">Связаться с нами</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 							<form method="post" action="#">
 								<div class="field">
-									<label for="name">Name</label>
+									<label for="name">Имя</label>
 									<input type="text" name="name" id="name" />
 								</div>
 								<div class="field">
@@ -193,11 +193,11 @@
 									<input type="email" name="email" id="email" />
 								</div>
 								<div class="field">
-									<label for="message">Message</label>
+									<label for="message">Сообщение</label>
 									<textarea name="message" id="message" rows="4"></textarea>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input type="submit" value="Отправить" /></li>
 								</ul>
 							</form>
 							<ul class="contact">
@@ -213,7 +213,7 @@
 								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Дизайн: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
